@@ -1,19 +1,14 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 2,
+  "uniques": 2,
   "views": [
     {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
+      "timestamp": "2022-07-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2022-07-27T00:00:00Z",
+      "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
